--- a/SC.css
+++ b/SC.css
@@ -4,13 +4,24 @@
     padding:0;
 }
 body{
-    background-color: black;
+    background:linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%)
+}
+.container{
+    width:60rem;
+    border:2px solid transparent;
+    margin-top: 50px;
+   margin-left: 20rem;
+    overflow: hidden;
+    height:90vh;
+    background-color: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+    box-shadow: 10px 25px 25px rgb(43, 76, 174);
 }
 .text{
-    color:aquamarine;
+    color:rgb(4, 47, 32);
     font-size: 4vw;
     display: flex;
     justify-content: center;
+    background-color: aqua;
 }
 .text p{
     position: relative;
@@ -22,7 +33,7 @@ body{
     left:0;
     width:100%;
     height:100%;
-    background-color: black;
+    background-color: aqua;
     border-left:1px solid chocolate;
     animation:type 1.3s steps(10) infinite ;
 }
@@ -36,15 +47,17 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 .cal{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(13, 13, 61, 0.781);
-    width:300px;
+    background-color: rgba(50, 99, 146, 0.781);
+    height: 30rem;
+    width:20rem;
     overflow:hidden;
-    box-shadow: 0 0 10px 20px rgba(13, 13, 61, 0.781);
+    box-shadow: 0 0 10px 20px rgba(50, 99, 146, 0.781);
 }
 .display input{
     position: relative;
@@ -52,7 +65,8 @@ body{
     width:100%;
     border-radius:10px;
     margin-top: 5px;
-    height:30px;
+    margin-bottom: 10rem;
+    height:40px;
     margin-bottom: 5px;
     text-align: right;
     font-size: large;
@@ -61,6 +75,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 4rem;
+    padding: 5px;
 }
 .content input{
     border-radius: 50%;
@@ -68,9 +84,8 @@ body{
     font-size: medium;
     padding: 12px;
     margin-left:10px;
-   
-   width:50px;
-   height:50px;
+   width:4rem;
+   height:4rem;
     background-color: orange;
     color: azure;
    
